-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.4
-
None
-
-
c1346c417 (dev), b9cd3e08d (6.10), 9366ca68f (6.9)
The documentation for QStringList says that:
But as of Qt 6 this is not correct, it is now an alias of QList<QString>: https://www.qt.io/blog/qlist-changes-in-qt-6. It should probably say something like the documentation of QByteArrayList:
QByteArrayList is actually just a QList<QByteArray>. It is documented as a full class just for simplicity of documenting the member methods that exist only in QList<QByteArray>.
For Gerrit Dashboard: QTBUG-102240 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
657250,2 | Doc: Fix incorrect inheritence statement in QStringList documentation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
657494,2 | Doc: Fix incorrect inheritence statement in QStringList documentation | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
657662,2 | Doc: Fix incorrect inheritence statement in QStringList documentation | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |