Doc: Fix incorrect inheritence statement in QStringList documentation

Updated the documentation to clarify that QStringList is not a
separate class.

Fixes: QTBUG-102240
Change-Id: Ifdbad8764e9cfaa915cfd7f27872d64b21e14977
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit c1346c4176c525f18b99e2f8839d8b5047dbe3af)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b9cd3e08d98ef70c5423c0053aab7fc229e206c3)